--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "investing-com-api",
-  "version": "2.1.1",
+  "version": "2.2.1",
   "description": "Unofficial APIs for Investing.com website.",
   "main": "index.js",
   "scripts": {
     "lint": "eslint ./",
-    "test": "mocha"
+    "test": "nyc mocha",
+    "coverage": "nyc --reporter=lcov --reporter=text mocha"
   },
   "repository": {
     "type": "git",
@@ -38,6 +39,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^5.0.0",
-    "mocha": "^8.1.3"
+    "mocha": "^8.1.3",
+    "nyc": "^15.1.0"
   }
 }
