--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,15 @@
 {
     "env": {
         "commonjs": true,
-        "es6": true,
-        "node": true,
-        "mocha": true
+        "es2021": true,
+        "mocha": true,
+        "node": true
     },
     "extends": [
         "standard"
     ],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
     "parserOptions": {
-        "ecmaVersion": 2018
+        "ecmaVersion": 12
     },
     "rules": {
         "quote-props": [
