--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,21 @@
 {
     "env": {
-        "commonjs": true,
-        "es2021": true,
-        "mocha": true,
-        "node": true
+      "commonjs": true,
+      "es2021": true,
+      "node": true,
+      "mocha": true
     },
-    "extends": [
-        "standard"
-    ],
+    "extends": "google",
     "parserOptions": {
-        "ecmaVersion": 12
+      "ecmaVersion": 12
     },
     "rules": {
-        "quote-props": [
-            "error",
-            "consistent-as-needed"
-        ]
+      "max-len": [
+        "error", 100
+      ],
+      "object-curly-spacing": [
+        "error", "always"
+      ],
+      "space-infix-ops": "error"
     }
-}
+  }
