--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "investing-com-api",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "description": "Unofficial APIs for Investing.com website.",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,8 @@
     "nasdaq",
     "futures",
     "currency",
-    "exchange"
+    "exchange",
+    "etf"
   ],
   "author": "Davide Violante",
   "license": "MIT",
@@ -33,13 +34,9 @@
     "axios": "^0.21.0"
   },
   "devDependencies": {
-    "eslint": "^7.29.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-standard": "^5.0.0",
-    "mocha": "^9.0.1",
+    "eslint": "^8.0.1",
+    "eslint-config-google": "^0.14.0",
+    "mocha": "^9.1.3",
     "nyc": "^15.1.0"
   }
 }
