--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint ./",
-    "test": "nyc mocha",
+    "test": "nyc mocha --timeout 5000",
     "coverage": "nyc --reporter=lcov --reporter=text mocha"
   },
   "repository": {
