--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "investing-com-api",
-  "version": "3.6.0",
+  "version": "4.0.0",
   "description": "Unofficial APIs for Investing.com website.",
   "main": "index.js",
   "scripts": {
@@ -31,7 +31,7 @@
   },
   "homepage": "https://github.com/DavideViolante/investing-com-api#readme",
   "dependencies": {
-    "axios": "^0.27.2"
+    "puppeteer": "^18.0.4"
   },
   "devDependencies": {
     "eslint": "^8.23.1",
