--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
       "commonjs": true,
       "es2021": true,
       "node": true,
-      "mocha": true
+      "jest": true
     },
     "extends": "google",
     "parserOptions": {
