--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
       "commonjs": true,
       "es2021": true,
       "node": true,
-      "mocha": true
+      "jest": true
     },
     "extends": "google",
     "parserOptions": {
@@ -11,7 +11,7 @@
     },
     "rules": {
       "max-len": [
-        "error", 100
+        "error", 120
       ],
       "object-curly-spacing": [
         "error", "always"
