--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "investing-com-api",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "Unofficial APIs for Investing.com website.",
   "main": "index.js",
   "scripts": {
     "lint": "eslint ./",
-    "test": "nyc mocha --timeout 5000 --exit",
-    "coverage": "nyc --reporter=lcov --reporter=text mocha --timeout 5000 --exit"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -30,13 +30,16 @@
     "url": "https://github.com/DavideViolante/investing-com-api/issues"
   },
   "homepage": "https://github.com/DavideViolante/investing-com-api#readme",
+  "jest": {
+    "coveragePathIgnorePatterns": ["functions.js"]
+  },
   "dependencies": {
     "puppeteer": "^18.0.4"
   },
   "devDependencies": {
     "eslint": "^8.23.1",
     "eslint-config-google": "^0.14.0",
-    "mocha": "^10.0.0",
-    "nyc": "^15.1.0"
+    "jest": "^29.0.3",
+    "jest-puppeteer": "^6.1.1"
   }
 }
